--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Getting Started Example",
-  "description": "Build an Extension!",
+  "name": "Newsworthy Doggos",
+  "description": "An Extension to turn depressing news into fun doggos",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "isDoggos.js"
   },
   "permissions": ["storage", "activeTab", "scripting"],
   "action": {
@@ -21,6 +21,5 @@
     "32": "/images/get_started32.png",
     "48": "/images/get_started48.png",
     "128": "/images/get_started128.png"
-  },
-  "options_page": "options.html"
+  }
 }
